<resources>
    <!-- Global -->
    <string name="app_name">Simple Dive Log</string>

    <!-- Global Menu -->
    <string name="menu_main_action_settings">Settings</string>
    <string name="menu_main_offline_label">Offline</string>
    <string name="menu_main_action_logout_label">Logout</string>

    <!-- Navigation Labels -->
    <string name="fragment_list_label">Simple Dive Log</string>
    <string name="fragment_edit_label">Edit Entry</string>
    <string name="fragment_detail_label">View Entry</string>

    <!-- List View -->
    <string name="list_entry_dive_number"># %d:</string>
    <string name="list_entry_dive_location"> %s</string>
    <string name="list_entry_max_depth">Maximum Depth: %d feet</string>
    <string name="list_entry_dive_duration">Dive Duration: %d minutes</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="message_creating_sample_data">Welcome! Creating some sample Data for you</string>

    <!-- Preference Titles -->
    <string name="units_header">Units</string>

    <!-- Depth Preferences -->
    <string name="pref_depth_unit_key" translatable="false">pref_depth_unit_key</string>
    <string name="pref_depth_unit_label">Use metric for depth</string>
    <string name="pref_depth_unit_summary_on">Meters</string>
    <string name="pref_depth_unit_summary_off">Feet</string>

    <!-- Pressure Preferences -->
    <string name="pref_pressure_unit_key" translatable="false">pref_pressure_unit_key</string>
    <string name="pref_pressure_unit_label">Use metric for pressure</string>
    <string name="pref_pressure_unit_summary_on">Bar</string>
    <string name="pref_pressure_unit_summary_off">PSI</string>

    <!-- Weight Preferences -->
    <string name="pref_weight_unit_key" translatable="false">pref_weight_unit_key</string>
    <string name="pref_weight_unit_label">Use metric for weight</string>
    <string name="pref_weight_unit_summary_on">Kg</string>
    <string name="pref_weight_unit_summary_off">Pound (lbs.)</string>

    <!-- Keys used programmatically-->
    <string name="navigated_back_key" translatable="false">navigated_back</string>

    <!-- Login View Strings -->
    <string name="login_view_login_state_action_button">Login</string>
    <string name="login_view_login_state_title">Login</string>
    <string name="login_view_login_state_switch_button">Register instead</string>
    <string name="login_view_register_state_action_button">Register</string>
    <string name="login_view_register_state_title">Register</string>
    <string name="login_view_register_state_switch_button">Login instead</string>
    <string name="login_view_username_hint">Username</string>
    <string name="login_view_password_hint">Password</string>
    <string name="login_view_password_repeat_hint">Repeat Password</string>
    <string name="login_view_dialog_title">Warning</string>
    <string name="login_view_dialog_message">This is an example app.\nTraffic is plaintext and not secured.\n\nPlease do NOT use any real passwords</string>
    <string name="login_view_helper_template">%s: %s</string>
    <string name="login_view_helper_min_chars">Min. %d characters</string>
    <string name="login_view_helper_allowed_chars">a–z, 0–9, %s</string>
    <string name="login_view_error_invalid_char">Allowed</string>
    <string name="login_view_error_too_short">Too short</string>
    <string name="login_view_error_no_match">Does not match</string>


    <!-- Detail View Strings -->
    <string name="detail_view_dive_number_label">Dive Number</string>
    <string name="detail_view_location_label">Location</string>
    <string name="detail_view_duration_label">Duration</string>
    <string name="detail_view_maxdepth_label">Maximum Depth</string>
    <string name="detail_view_date_label">Date</string>
    <string name="detail_view_weight_label">Weight</string>
    <string name="detail_view_air_in_label">Air in</string>
    <string name="detail_view_air_out_label">Air out</string>
    <string name="detail_view_notes_label">Notes</string>
    <string name="menu_detail_view_edit_button_label">Edit</string>
    <string name="detail_view_dive_number_content">#%s</string>
    <string name="detail_view_duration_content">%s minutes</string>
    <string name="detail_view_maxdepth_content">%s meters</string>
    <string name="detail_view_weight_content">%s kg</string>
    <string name="detail_view_air_content">%s bar</string>
    <string name="detail_view_placeholder_item_no_data" translatable="false">--</string>

    <!-- Edit View Strings -->
    <string name="edit_view_dive_number_hint">Dive Number*</string>
    <string name="edit_view_dive_number_helper">*Required</string>
    <string name="edit_view_date_hint">Select Date*</string>
    <string name="edit_view_date_helper">*Required</string>
    <string name="edit_view_duration_hint">Dive Duration (minutes)*</string>
    <string name="edit_view_duration_helper">*Required</string>
    <string name="edit_view_maxdepth_hint">Maximum Depth (meters)*</string>
    <string name="edit_view_maxdepth_helper">*Required</string>
    <string name="edit_view_location_hint">Location*</string>
    <string name="edit_view_location_helper">*Required</string>
    <string name="edit_view_weight_hint">Weight used (kg)</string>
    <string name="edit_view_air_in_hint">Air in (bar)</string>
    <string name="edit_view_air_out_hint">Air Out (bar)</string>
    <string name="edit_view_notes_hint">Notes and Comments</string>
    <string name="edit_view_button_save_label">SAVE</string>

    <!-- Picture Fragment Strings -->
    <string name="picture_fragment_gallery_dialog_title">Gallery Permission</string>
    <string name="picture_fragment_gallery_dialog_rationale_body">Please allow the app open pictures from the gallery</string>
    <string name="picture_fragment_camera_dialog_title">Camera Permission</string>
    <string name="picture_fragment_camera_dialog_rationale_body">Please allow the app to use the camera in order to take pictures</string>
    <string name="picture_fragment_dialog_denied_body">Permission was denied, please allow permission in the settings</string>
    <string name="picture_fragment_dialog_positive_button_settings">Settings</string>

    <!-- Error Messages -->
    <string name="general_error">Something went wrong, please try again</string>
    <string name="login_unauthorized">Username or password is incorrect</string>
    <string name="server_error">Its not you, it\'s us. Server has problems, please try again later</string>
    <string name="database_error">An database error occurred</string>
    <string name="general_unauthorized">We couldn\'t verify your account. Please login again</string>
    <string name="item_not_found">The item you were looking for couldn\'t be found</string>
    <string name="register_user_exists_already">The username is already taken</string>
    <string name="no_internet_connection">Unable to connect to the server. Please try again later</string>

</resources>